Play around with newer language features